[package]
name = "gcore"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gsys.workspace = true
gear-core-errors.workspace = true
codec = { workspace = true, optional = true }
static_assertions.workspace = true
gear-wasm-instrument.workspace = true

[dev-dependencies]
hex-literal.workspace = true
galloc.workspace = true

[features]
optimized = ["stack_buffer", "stack_pointer_global_index_is_zero"]
stack_buffer = ["gsys/stack_buffer"]
stack_pointer_global_index_is_zero = ["gsys/stack_pointer_global_index_is_zero"]
codec = ["dep:codec", "gear-core-errors/codec"]
debug = []
