[package]
name = "pallet-builtins"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage = "https://gear-tech.io"
repository = "https://github.com/gear-tech/gear"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
pallet-gear.workspace = true
frame-support.workspace = true
frame-system.workspace = true
sp-core.workspace = true
sp-std.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
parity-scale-codec.workspace = true
scale-info = { workspace = true, features = ["derive"] }
gear-core.workspace = true

[features]
default = ["std"]
std = [
	"pallet-gear/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
    "scale-info/std",
	"parity-scale-codec/std",
]
