[package]
name = "demo-provision"
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2018"
license = "GPL-3.0"
workspace = "../../../"

[dependencies]
gstd = { workspace = true, features = ["debug"] }

[build-dependencies]
gear-wasm-builder.workspace = true

[dev-dependencies]
gtest.workspace = true

[features]
std = []
default = ["std"]
